--- a/style.css
+++ b/style.css
@@ -225,6 +225,12 @@ aside h2 {
 	border-radius: 50%;
 }
 
+#icones_hobbies {
+	padding: 0;
+}
+
+
+
 
 /* Portables & Tablettes */
 
@@ -236,12 +242,23 @@ aside h2 {
 
 }
 
+
+
 /* Smartphones */
 
-@media all and (max-device-width: 480px) {
+@media all and (max-width: 768px) {
+
+body {
+	padding: 0;
+	margin: 0;
+}
 
 #main_page {
 	width: 100%;
+}
+
+#main {
+	margin: 2%;
 }
 
 }
