--- a/style.css
+++ b/style.css
@@ -29,24 +29,30 @@
 /* GENERAL */
 
 * {
+	box-sizing: border-box;
 	font-family: 'unb_officeregular', arial, georgia, sans-serif;
 }
 
 body {
-	width: 100%;
+	width: auto;
+	margin: 0;
+	padding: 0;
+	font-size: 0.7em;
 }
 
 #main_page {
+	width: 100%;
+	min-width: 340px;
 	display: flex;
-	flex-direction: row-reverse;
-	margin: auto;
-	width: 70%;
-	min-width: 768px;
+	flex-direction: column;
 }
 
-#page {
-	width: 70%;
+img {
+	width: 120px;
+	height: 120px;
+	height: auto;
 }
+
 
 h1, h2, h3 {
 	text-transform: uppercase;
@@ -67,16 +73,51 @@ a {
 
 em {
 	font-style: normal;
-	font-size: 1.1em;
+	font-size: 1.2em;
 }
 
 
 /* HEADER */
 
 h1 {
-	font-size: 3.3em;
+	font-size: 2.5em;
 	font-weight: normal;
 	color: #FFC107;
+}
+
+header {
+	display: flex;
+}
+
+header p {
+	margin-top: 5px;
+}
+
+header h1 {
+	margin-bottom: 0;
+}
+
+#photo {
+	width: 40%;
+
+}
+
+#photo img {
+	display: block;
+	margin: auto;
+	margin-top: 20px;
+	border-radius: 50%;
+	border: 3px solid rgba(255, 193, 7, 0.5);
+}
+
+.titre {
+	width: 60%;
+	padding-left: 10px;
+	padding-top: 30px;
+}
+
+.titre strong {
+	font-size: 1.1em;
 }
 
 .police {
@@ -84,82 +125,54 @@ h1 {
 	color: black;
 }
 
-header {
-	margin-bottom: 80px;
+.orange {
+	border-bottom: 1px solid #FFC107;
 }
-
-header span {
-	padding-bottom: 2px;
-}
-
-header p {
-	position: relative;
-	font-size: 1.5em;
-	bottom: 30px;
-}
-
 
 /* MAIN */
 
 #main {
-	margin: 5%;
-	width: 70%;
-}
-
-#main h2 {
-	padding-bottom: 10px;
-	border-bottom: 1.5px solid #FFC107;
-}
-
-.flex {
 	display: flex;
+	flex-direction: column;
+	margin: 10px;
+}
+
+#parcours h2 {
+	padding-bottom: 10px;
+	border-bottom: 1px solid #FFC107;
 }
 
 .date {
-	position: relative;
-	right: 25px;
 	display: flex;
 }
 
-.date ul {
-	width: 90px;
+ul {
+	position: relative;
+	right: 30px;
 }
 
-.etablissement {
-	margin-left: 50px;
+#formations, #experiences, #recommandations {
+	margin-bottom: 30px;
 }
 
-.etablissement_first {
-	margin-left: 42px;
+.flex_recommandations div {
+	margin-top: 20px;
 }
 
 .fa-circle {
 	font-size: 0.5em;
 	color: #FFC107;
 	position: relative;
-	top: 25px;
-	left: 27px;
+	top: 16px;
+	left: 2px;
 }
 
 .fa-dot-circle {
 	font-size: 1em;
 	color: #FFC107;
 	position: relative;
-	top: 20px;
-	left: 25px;
-}
-
-.orange {
-	border-bottom: 1.5px solid #FFC107;
-}
-
-.flex_recommandations {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.flex_recommandations div {
-	padding-right: 120px;
+	top: 13px;
+	left: 2px;
 }
 
 .fa-graduation-cap, .fa-briefcase, .fa-pencil-alt {
@@ -169,95 +182,184 @@ header p {
 }
 
 
-/* ASIDE */
 
-aside {
-	width: 30%;
-	background-color: #FFC107;
-	text-align: center;
-	min-width: 261px;
-}
+/* ASIDE */
 
 aside h2 {
 	background-color: #4c4c4c;
-	color: #FECA07;
-	padding: 5px;
-}
-
-#photo {
-	margin-top: 60px;
-	margin-bottom: 30px;
-}
-
-#photo img {
-	width: 80%;
-	height: 80%;
-	border-radius: 50%;
-	border: 3px solid rgba(0, 0, 0, 0.2);
-}
-
-.contact {
-	margin: 10%;
-}
-
-#contact p {
-	text-align: left;
-	margin: auto;
-	margin-bottom: 15px;
-	word-wrap: break-word;
+	color: #FFF;
+	padding: 5px 0 5px 5px;
 }
 
 #a_propos p {
-	margin: 10%;
 	text-align: justify;
-	height: 1050px;
 }
 
 
 .fa-table-tennis, .fa-running, .fa-biking {
 	color:#4c4c4c;
+	display: inline-block;
 	font-size: 2.3em;
-	width: 40px;
-	height: 40px;
-	padding: 10px;
-	margin: 10px;
+	width: 45px;
+	height: 45px;
+	margin: 2%;
+	padding-top: 6px;
 	border: 2px solid #4c4c4c;
 	border-radius: 50%;
 }
 
-#icones_hobbies {
-	padding: 0;
+.icones_hobbies {
+		text-align: center;
+	}
+
+
+/* Tablettes */
+
+@media all and (min-width: 768px) {
+
+	body {
+		font-size: 0.9em;
+	}
+	
+
+	#main {
+		flex-direction: row-reverse;
+		margin: 0;
+	}
+
+	#contact h2 {
+		margin-top: 0;
+	}
+
+	#photo {
+		background-color: #FFC107;
+		width: 30%;
+		height: 220px;
+	}
+
+	.titre {
+		width: 70%;
+		padding-left: 20px;
+	}
+
+	.date {
+		width: 30%;
+	}
+
+	.etablissement {
+		width: 70%;
+	}
+
+	#photo img {
+		width: 160px;
+		height: 160px;
+		margin-top: 30px;
+		border: 3px solid rgba(0, 0, 0, 0.3);
+	}
+
+
+	aside {
+		width: 30%;
+		background-color: #FFC107;
+	}
+
+	aside h2 {
+		color: #FFC107;
+		text-align: center;
+	}
+
+	#parcours {
+		width: 70%;
+		padding-left: 20px;
+	}
+
+	.flex {
+		display: flex;
+	}
+
+	.flex_recommandations {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.flex_recommandations div {
+		margin-right: 10%;
+
+	}
+
+	#contact div, #a_propos p {
+		margin: 5%;
+	}
+
+	#a_propos {
+
+		height: 1100px;
+	}
+
+	.fa-circle {
+		top: 20px;
+	}
+
+	.fa-dot-circle {
+		top: 16px;
+	}
+
+	.fa-table-tennis, .fa-running, .fa-biking {
+		width: 55px;
+		height: 55px;
+		margin: 3%;
+		padding-top: 7px;
+	}
+
 }
 
 
 
-/* Portables & Tablettes */
-
-@media all and (min-width: 768px) and (max-width: 1388px) {
-
-#main_page {
-	width: 100%;
-}
-
-}
+/* Ordinateurs */
 
 
+@media all and (min-width: 1199px) {
 
-/* Smartphones */
+	body {
+		font-size: 1em;
+	}
 
-@media all and (max-width: 768px) {
+	#photo img {
+		width: 180px;
+		height: 180px;
+		margin-top: 30px;
+	}
 
-body {
-	padding: 0;
-	margin: 0;
-}
+	#photo {
+		height: 240px;
+	}
 
-#main_page {
-	width: 100%;
-}
+	#main_page {
+		width: 70%;
+		max-width: 1388px;
+		margin: auto;
+	}
 
-#main {
-	margin: 2%;
-}
+	.titre {
+		padding-left: 40px;
+	}
+
+	#parcours {
+		padding-left: 40px;
+	}
+
+	.fa-circle {
+		top: 22px;
+	}
+
+	.fa-dot-circle {
+		top: 19px;
+	}
+
+	.fa-table-tennis, .fa-running, .fa-biking {
+		width: 60px;
+		height: 60px;
+		padding-top: 9px;
+	}
 
 }
