--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 	width: auto;
 	margin: 0;
 	padding: 0;
-	font-size: 0.7em;
+	font-size: 0.9em;
 }
 
 #main_page {
@@ -112,8 +112,7 @@ header h1 {
 
 .titre {
 	width: 60%;
-	padding-left: 10px;
-	padding-top: 30px;
+	padding: 10px;
 }
 
 .titre strong {
@@ -163,7 +162,7 @@ ul {
 	font-size: 0.5em;
 	color: #FFC107;
 	position: relative;
-	top: 16px;
+	top: 20px;
 	left: 2px;
 }
 
@@ -171,9 +170,11 @@ ul {
 	font-size: 1em;
 	color: #FFC107;
 	position: relative;
-	top: 13px;
+	top: 16px;
 	left: 2px;
 }
+
+
 
 .fa-graduation-cap, .fa-briefcase, .fa-pencil-alt {
 	font-size: 1.5em;
@@ -192,6 +193,7 @@ aside h2 {
 }
 
 #a_propos p {
+	padding: 3%;
 	text-align: justify;
 }
 
@@ -200,10 +202,10 @@ aside h2 {
 	color:#4c4c4c;
 	display: inline-block;
 	font-size: 2.3em;
-	width: 45px;
-	height: 45px;
-	margin: 2%;
-	padding-top: 6px;
+	width: 55px;
+	height: 55px;
+	margin: 3%;
+	padding-top: 7px;
 	border: 2px solid #4c4c4c;
 	border-radius: 50%;
 }
@@ -216,10 +218,6 @@ aside h2 {
 /* Tablettes */
 
 @media all and (min-width: 768px) {
-
-	body {
-		font-size: 0.9em;
-	}
 	
 
 	#main {
@@ -240,6 +238,7 @@ aside h2 {
 	.titre {
 		width: 70%;
 		padding-left: 20px;
+		padding-top: 30px;
 	}
 
 	.date {
@@ -292,23 +291,7 @@ aside h2 {
 	}
 
 	#a_propos {
-
 		height: 1100px;
-	}
-
-	.fa-circle {
-		top: 20px;
-	}
-
-	.fa-dot-circle {
-		top: 16px;
-	}
-
-	.fa-table-tennis, .fa-running, .fa-biking {
-		width: 55px;
-		height: 55px;
-		margin: 3%;
-		padding-top: 7px;
 	}
 
 }
